objects/User_Interaction__c.object
<CustomObject>
    <fields>
        <fullName>Badge_Giver_Id__c</fullName>
        <label>Badge Giver Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Badge_Message__c</fullName>
        <label>Badge Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Badge__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Badge</label>
        <referenceTo>WorkBadgeDefinition</referenceTo>
        <relationshipLabel>User Interactions</relationshipLabel>
        <relationshipName>User_Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Badge_request_payload__c</fullName>
        <description>Semi colon separated giverId, recipient id, badge id, message
Necessary field required to create new badge</description>
        <label>Badge request payload</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <picklist>
            <picklistValues>
                <fullName>T&amp;C Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T&amp;C Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terms and Conditions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Badge T&amp;C Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Badge T&amp;C Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Badge T&amp;C Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Badge Removed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Login Email Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Privacy Notice Accepted</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Email__c</fullName>
        <formula>User__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Additional_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Interaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Event__c</columns>
        <columns>Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>UI-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Interactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>